--- a/devops.html
+++ b/devops.html
@@ -38,17 +38,25 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698364871-ingenieur-devops-h-f'>CITECH Ing?nieur D?vOps H/F | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/magenic/job/oSCqbfwP'>Magenic Careers - Senior DevOps Engineer- Chicago</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://qustodio.recruitee.com/o/devops-team-lead'>
       DevOps Team Lead - Qustodio
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=odUpbfwr&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nyb0mMwm'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=o4rfafwE&__jvst=Referral&__jvsd=s6lxKhwu&__jvsc=Twitter&bid=nNeZmMwD'>Rackspace Careers - DevOps Consultant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=o4rfafwE&__jvst=Referral&__jvsd=s6lxKhwu&__jvsc=Twitter&bid=nNeZmMwD'>Rackspace Careers - DevOps Consultant</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -64,7 +72,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://virtumente.com/job/ipresence-devops-engineer/'>iPresence: DevOps Engineer ? Virtumente</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://virtumente.com/job/ipresence-devops-engineer/'>iPresence: DevOps Engineer ? Virtumente</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -92,7 +100,7 @@
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rewardsnetwork/8d567c27-12fe-4c4e-bea6-e08f5111c700'>Rewards Network - DevOps and Cloud Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rewardsnetwork/8d567c27-12fe-4c4e-bea6-e08f5111c700'>Rewards Network - DevOps and Cloud Engineer</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -128,7 +136,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://twincap.join.com/jobs/465195-it-devops-iot-ref-106146'>Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -168,7 +176,7 @@
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/indigo/jobs/1931899'>Job Application for Senior Engineering Manager, DevOps at Indigo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931899'>Job Application for Senior Engineering Manager, DevOps at Indigo</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -188,7 +196,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oqPhbfwr&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nvHGlMwu'>MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oqPhbfwr&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nvHGlMwu'>MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -232,7 +240,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698033097-devops-engineer'>onepoint DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698033097-devops-engineer'>onepoint DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -261,7 +269,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/integrate/db73405c-c284-42d5-bc20-fb5a260e0801'>Integrate - DevOps Engineer (Lead)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/integrate/db73405c-c284-42d5-bc20-fb5a260e0801'>Integrate - DevOps Engineer (Lead)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -309,7 +317,7 @@ of?...</p>
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/2b5c0218-d07c-4ff8-adfc-cc4fb9cd212c'>Kyivstar - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kyivstar/2b5c0218-d07c-4ff8-adfc-cc4fb9cd212c'>Kyivstar - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -317,7 +325,7 @@ of?...</p>
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTTqbfw7&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nKYllMwF'>NICE Actimize Careers - DevOps Engineer - NICE Actimize</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oTTqbfw7&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nKYllMwF'>NICE Actimize Careers - DevOps Engineer - NICE Actimize</a></h5> 
 <p><span class="badge badge-light">Raanana, Israel</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -337,7 +345,7 @@ of?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/resolver/job/oNE99fwt'>Resolver Careers - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/resolver/job/oNE99fwt'>Resolver Careers - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -399,7 +407,7 @@ of?...</p>
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -446,14 +454,6 @@ strive for the best build and deploy experience that we can offer our developer?
 <h5><a href='https://jobs.lever.co/stridehealth/a36d78ea-51dd-4808-8d8e-7b674f13238b'>Stride Health - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/stridehealth/e87fb6ef-db41-4365-a355-686629562bb5'>Stride Health - Director of Security DevOps (SecDevOps)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=oFJZafwh&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nBP8jMw8'>Silver Peak Systems Careers - DevOps Tools Engineer</a></h5> 
-<p><span class="badge badge-light">Bangalore, India</span></p>
-<p>Posted on:: 2019-10-24</p>
 <hr/>
 
 
